# apk-mitm-python

./: .gitignore  CLAUDE.md  IMPORTS_CATALOG.md  README.md  UPSTREAM_COMMIT  main.py  pyproject.toml
apk_mitm/: cli.py  index.py  patch_apk.py  patch_app_bundle.py
apk_mitm/dependencies/: chalk.py  env_paths.py  escape_string_regexp.py  execa.py  globby.py  listr.py  tempy.py  yargs_parser.py
apk_mitm/tasks/: apply_patches.py  check_prerequisites.py  copy_certificate_file.py  create_netsec_config.py  disable_certificate_pinning.py  download_tools.py  modify_manifest.py
apk_mitm/tasks/smali/: parse_head.py  patches.py  process_file.py
apk_mitm/tools/: apktool.py  tool.py  uber_apk_signer.py
apk_mitm/utils/: build_glob.py  download_file.py  download_tool.py  execute_jar.py  fs.py  get_java_version.py  observe_async.py  observe_listr.py  observe_process.py  user_error.py
dependency_issues/: cli.md  download_tool.md  patch_apk.md
scripts/: fetch_upstream.sh
src/: cli.py  index.py  patch_apk.py  patch_app_bundle.py
src/dependencies/: cross_zip.py  follow_redirects.py  fs.py  listr.py  path.py  rxjs.py  xml_js.py
src/tasks/: apply_patches.py  check_prerequisites.py  copy_certificate_file.py  create_netsec_config.py  disable_certificate_pinning.py  download_tools.py  modify_manifest.py
src/tasks/smali/: patches.py  process_file.py  types.py
src/tools/: apktool.py  tool.py  uber_apk_signer.py
src/utils/: build_glob.py  download_file.py  download_tool.py  execute_jar.py  fs.py  get_java_version.py  observe_async.py  observe_listr.py  observe_process.py
