[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "apk-mitm-python"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "colorama>=0.4.6",
    "httpx>=0.28.1",
    "platformdirs>=4.9.4",
]

[tool.hatch.build.targets.wheel]
packages = ["apk_mitm"]

[project.scripts]
apk-mitm-py = "apk_mitm.cli:main_sync"
